# HTFS

./: DESIGN_DOCUMENT.md  DatabaseManager.py  LICENSE  QueryEvaluator.py  RDFHandler.py  README.md  SQLiteHandler.py  TagHandler.py  TagService.py  TagfsUtilities.py  migrate_rdf_to_split.py  migrate_sql_to_rdf.py  pyproject.toml  tagfs  tagfs.py  tagfs_inotify_daemon.py
.github/workflows/: ci.yml  pylint.yml  test.yml
htfs/: cli.py  core.py  database.py  query_evaluator.py  rdf_handler.py  sqlite_handler.py  tag_service.py
shell/: tagfs.bat  tagfs_completion.bash  tagfs_guesstags.py  tagfs_ls.sh  tagfs_prompt.sh
test/: __init__.py  testTagHandler.py  test_query_evaluator.py  test_script.sh
test/dir1/: calculus.txt
test/dir2/: physics.txt  quantummechanics.txt
